# eggshells

./: .gitignore  Cargo.toml  README.md  package-lock.json  publisher_history.json
crates/client/: Cargo.toml
crates/client/src/: .updater.rs.kate-swp  anti_tamper.rs  config.rs  gui.rs  main.rs  updater.rs  verifier.rs
crates/common/: Cargo.toml
crates/common/src/: crypto.rs  lib.rs  models.rs  version.rs
crates/crypto-core/: Cargo.toml
crates/crypto-core/src/: classical_signature.rs  hashing.rs  hybrid_signature.rs  key_management.rs  lib.rs  pq_signature.rs
crates/publisher-gui/: Cargo.toml
crates/publisher-gui/src/: auth.rs  main.rs
crates/publisher-tool/: Cargo.toml
crates/publisher-tool/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  auth.rs  db.rs  main.rs  publisher.rs  rate_limit.rs  storage.rs
crates/update-client/: Cargo.toml  tauri.conf.json
crates/update-client/src/: anti_tamper.rs  commands.rs  download.rs  lib.rs  main.rs  rollback.rs  server_registry.rs  verifier.rs
crates/update-client/ui/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
crates/update-client/ui/src/: App.js  App.tsx  main.js
crates/update-client/ui/src/components/: Dashboard.js  Dashboard.tsx  Layout.js  Layout.tsx  LogViewer.js  LogViewer.tsx  SecurityStatus.js  SecurityStatus.tsx  ServerManager.js  ServerManager.tsx  SettingsPanel.js  SettingsPanel.tsx  Sidebar.js  Sidebar.tsx  UpdateCard.js  UpdateCard.tsx  UpdateList.js  UpdateList.tsx  VerificationBadge.js  VerificationBadge.tsx
crates/update-client/ui/src/store/: appStore.js  appStore.ts
crates/update-client/ui/src/styles/: globals.css
crates/update-client/ui/src/types/: index.ts
crates/update-client/ui/src/utils/: tauriApi.js  tauriApi.ts
crates/update-server/: Cargo.toml
crates/update-server/src/: api.rs  config.rs  main.rs  manifest.rs  storage.rs
docs/: architecture.md  crypto-rationale.md  how_to_key.md  threat-model.md
keys/: demo-publisher_private.json  demo-publisher_public.json  publisher.json
scripts/: demo.sh  release_with_server_integrity.sh  run-sast.sh  run_sast.sh  server.toml  setup.ps1  setup.sh  update-client-config.json
scripts/demo-keys/: demo-publisher.pub.json
scripts/installed/Unibomber/: test.txt
scripts/keys/: publisher.json  test-publisher.pub.json  testowy-pubenlikatoren.pub.json
tests/: attack_scenarios.rs  integration_tests.rs
tools/attack-simulator/: Cargo.toml
tools/attack-simulator/src/: main.rs
tools/keygen/: Cargo.toml
tools/keygen/src/: main.rs
workflows/: ci.yml
