# crates/client/Cargo.toml
[package]
name = "secure-update-client"
version = "0.1.0"
edition = "2021"
description = "Update Client with GUI (egui) - cross-platform"

[dependencies]
secure-update-common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# GUI
eframe = "0.28"
egui = "0.28"
egui_extras = { version = "0.28", features = ["image"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Runtime bridge for async in egui
pollster = "0.3"