# crates/common/Cargo.toml
[package]
name = "secure-update-common"
version = "0.1.0"
edition = "2021"
description = "Shared types and cryptography for secure update system"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }

# Post-quantum cryptography (CRYSTALS-Dilithium)
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# Classical cryptography (Ed25519)
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
rand = "0.8"

# Hashing (SHA3-256)
sha3 = "0.10"
digest = "0.10"

# Serialization for network transfer
bincode = "1.3"