[package]
name = "crypto-core"
version = "0.1.0"
edition = "2021"
description = "Hybrid post-quantum + classical cryptographic primitives for secure updates"

[dependencies]
# Post-quantum cryptography (ML-DSA / Dilithium)
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# Classical cryptography
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
x25519-dalek = { version = "2", features = ["serde"] }

# Hashing
sha3 = "0.10"
blake3 = "1.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
base64 = "0.22"
hex = "0.4"

# Randomness
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Zeroize secrets
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"