[package]
name = "secure-update-publisher-gui"
version = "0.1.0"
edition = "2021"
description = "GUI Publisher Tool for Secure Update System"

[dependencies]
secure-update-common = { path = "../common" }

eframe = "0.28"
egui = "0.28"

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }

reqwest = { version = "0.12", features = ["json", "blocking"] }
rfd = "0.14"

sha3 = "0.10"
digest = "0.10"