# crates/publisher-tool/Cargo.toml
[package]
name = "secure-update-publisher"
version = "0.1.0"
edition = "2021"
description = "CLI tool for publishers to generate keys, sign and publish packages"

[dependencies]
secure-update-common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
indicatif = "0.17"
dialoguer = "0.11"