# crates/server/Cargo.toml
[package]
name = "secure-update-server"
version = "0.1.0"
edition = "2021"
description = "Update Server with multi-publisher support"

[dependencies]
secure-update-common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Web framework
actix-web = "4"
actix-multipart = "0.7"
actix-cors = "0.7"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }
futures-util = "0.3"