[package]
name = "secure-update-server"
version = "0.1.0"
edition = "2021"

[dependencies]
secure-update-common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

actix-web = "4"
actix-cors = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }

sha3 = "0.10"
digest = "0.10"

# Argon2id dla hashowania haseł (memory-hard, odporny na GPU brute-force)
argon2 = "0.5"

# Thread-safe hashmap dla rate limitera
dashmap = "5"