[package]
name = "secure-update-server"
version = "0.1.0"
edition = "2021"

[dependencies]
secure-update-common = { path = "../common" }

serde              = { workspace = true }
serde_json         = { workspace = true }
chrono             = { workspace = true }
uuid               = { workspace = true }
hex                = { workspace = true }
base64             = { workspace = true }

# sha3 = "0.10"
# digest = "0.10"

# Argon2id dla hashowania haseł (memory-hard, odporny na GPU brute-force)
argon2 = "0.5"

# Thread-safe hashmap dla rate limitera
dashmap = "5"

# ── Web server ────────────────────────────────────────────────────────────────
actix-web          = { version = "4", features = ["rustls-0_23"] }  # ← changed
actix-cors         = "0.7"

# ── TLS (rustls replaces openssl) ─────────────────────────────────────────────
rustls             = "0.23"                                           # ← new
rustls-pemfile     = "2"                                              # ← new

# ── Async / utils ─────────────────────────────────────────────────────────────
tokio              = { version = "1", features = ["full"] }
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Storage / crypto ──────────────────────────────────────────────────────────
rusqlite           = { version = "0.31", features = ["bundled"] }
sha3               = "0.10"
digest             = "0.10"

# [package]
# name = "secure-update-server"
# version = "0.1.0"
# edition = "2021"
#
# [dependencies]
# secure-update-common = { path = "../common" }
# serde = { workspace = true }
# serde_json = { workspace = true }
# # tokio = { workspace = true }
# # anyhow = { workspace = true }
# # tracing = { workspace = true }
# # tracing-subscriber = { workspace = true }
# chrono = { workspace = true }
# uuid = { workspace = true }
# hex = { workspace = true }
# base64 = { workspace = true }
#
# # actix-web = "4"
# # actix-cors = "0.7"
# rusqlite = { version = "0.31", features = ["bundled"] }
#
# # openssl = "0.10"
#
# sha3 = "0.10"
# digest = "0.10"
#
# # [dependencies]
# actix-web = { version = "4", features = ["openssl"] }
# actix-cors = "0.7"
# openssl = "0.10"
# tokio = { version = "1", features = ["full"] }
# anyhow = "1"
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
