[package]
name = "update-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "update_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
crypto-core = { path = "../crypto-core" }

# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
log = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"

# Platform-specific
[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific deps if needed

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific deps if needed