[package]
name = "attack-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto-core = { path = "../../crates/crypto-core" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"